--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -6,14 +6,13 @@
 </head>
 <body>
 
-
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
     </div>
+  </div>
 
 
   <style>
@@ -62,13 +61,37 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.5s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
+
   <script>
 
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourdHand = document.querySelector('.hour-hand');
+
+    function setDate(){
+      const now            = new Date();
+      const seconds        = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      const mins           = now.getMinutes();
+      const minsDegrees    = ((mins / 60) * 360) + 90;
+      const hours          = now.getHours();
+      const hoursDegrees   = ((hours / 12) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minHand.style.transform    = `rotate(${minsDegrees}deg)`;
+      hourdHand.style.transform  = `rotate(${hoursDegrees}deg)`;
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
+
 </body>
 </html>
